# amadeus

./: .dockerignore  Makefile  docker-compose.yml  pyproject.toml
assets/weights/: README.md
docker/uv/: Dockerfile
src/amadeus/: config.py  main.py
src/amadeus/exceptions/: __init__.py  base_exceptions.py  tts_exceptions.py
src/amadeus/mappers/: tts_model_mapper.py  tts_voice_mapper.py
src/amadeus/middlewares/: __init__.py  cors_middleware.py
src/amadeus/routes/: __init__.py  tts_route.py
src/amadeus/schemas/queries/: base_query_schema.py  tts_model_query_schema.py  tts_voice_query_schema.py
src/amadeus/schemas/requests/: tts_talk_request_schema.py
src/amadeus/schemas/responses/: tts_model_response_schema.py  tts_voice_response_schema.py
src/amadeus/services/: tts_service.py
src/amadeus/utils/: tts_utils.py
